test/kuttl/tests/ovn_liveness/07-scale-down-and-restore-northd.yaml
#
# Step for:
#
# This step removes the NetworkPolicy that blocks the egress traffic to the ovn-northd
# to make sure that the liveness probe works fine and ovn-northd is back to normal state

apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  name: block-northd-egress-traffic
